--- a/Mega_project/.env.sample
+++ b/Mega_project/.env.sample
@@ -1,5 +1,5 @@
 VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
 VITE_APPWRITE_DATABSE_ID="66e822040024f3c29a4f"
-VITE_APPWRITE_COLLECTION_ID=""
+VITE_APPWRITE_COLLECTION_ID="66e822040024f3c29a4f"
 VITE_APPWRITE_PROJECT_ID="66e821430015726c96aa"
 VITE_APPWRITE_BUCKET_ID="66e8243e0025623f88fd"
